# review-service

./: Dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 6f2d3a9b4c11_add_unique_constraint_for_review_user_product.py  e125e037ef11_create_table.py
app/: exceptions.py  main.py  schemas.py
app/api/: deps.py
app/api/routers/: __init__.py  reviews.py
app/core/: clients.py  config.py  database.py  rabbit_config.py
app/crud/: reviews_crud.py
app/models/: __init__.py  mixins.py  reviews.py
app/services/: __init__.py  reviews_service.py
