[project]
name = "user-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.7",
    "aiohttp>=3.12.15",
    "alembic>=1.16.5",
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "fastapi>=0.116.1",
    "faststream[rabbit]>=0.5.48",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pydantic-settings>=2.10.1",
    "pydantic[email]>=2.11.7",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "ruff>=0.12.10",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]
